사용자 입력 추가

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,58 +1,11 @@
-.home_container{
-    position: relative;
-    background-color: white;
-    font-weight: 300px;
-    padding-top: 30px;
-    padding-left: 80px;
-    color: #adaeb9;
-    display: block;
-    color: inherit;
-    font-family: "맑은 고딕", "돋움", "Apple SD Gothic Neo", sans-serif;
-}
-
-.theme{
+.floating{
     position: absolute;
-    font-family: "맑은 고딕", "돋움", "Apple SD Gothic Neo", sans-serif;
-    top: 30px;
-    left: 5%;
+    top: 130px;
+    left: 15%;
 }
 
-.home_button_changeOption{
-    background-color:rgb(255, 240, 173);
-    color:rgb(139, 131, 94);
-    font-family: "맑은 고딕", "돋움", "Apple SD Gothic Neo", sans-serif;
-    font-size: smaller;
-    left: 5%;
-    cursor:pointer;
-    border: none;
-	border-radius: 15px;
-    padding: 8px 16px;
-	text-decoration: none;
-    font-weight: 600;
-    transition: 0.25s;
-}
-
-.home_button_changeOption:hover{
-    background-color: rgb(253, 225, 100);
-    color:rgb(139, 131, 94);
-}
-
-.button_theme{
-    background-color:rgb(204, 226, 245);
-    color:rgb(98, 124, 150);
-    font-family: "맑은 고딕", "돋움", "Apple SD Gothic Neo", sans-serif;
-    font-size: smaller;
-    left: 5%;
-    cursor:pointer;
-    border: none;
-	border-radius: 15px;
-    padding: 8px 16px;
-	text-decoration: none;
-    font-weight: 600;
-    transition: 0.25s;
-}
-
-.button_theme:hover{
-    background-color: rgb(140, 167, 218);
-    color:whitesmoke;
+.news_list{
+    position: absolute;
+    top: 240px;
+    left: 15%;
 }
